--- a/index.css
+++ b/index.css
@@ -17,22 +17,21 @@ body {
 }
 
 /* === Fonts === */
-
 @font-face {
-  font-family: "Cursed Timer ULiL", sans-serif;
-  src: url(Fonts/CursedTimer.ttf);
+  font-family: "CursedTimer";
+  src: url(Fonts/CursedTimerULiL.ttf);
 }
 
 @font-face {
-  font-family: "Verdana", sans-serif;
-  src: url(Fonts/Verdana.ttf);
+  font-family: "Verdana";
+  src: url(Fonts/VerdanaBold.ttf);
 }
 
 /* ================ */
 
 h3 {
   margin: 0;
-  font-family: "Verdana", sans-serif;
+  font-family: "Verdana";
   font-size: 40px;
   color: #EEEEEE;
 }
@@ -40,11 +39,13 @@ h3 {
 .score {
   background: #080001;
   border-radius: 5px;
-  font-family: "Cursed Timer ULiL", sans-serif;
+  font-family: "CursedTimer";
   font-weight: 400;
   font-size: 90px;
   color: #F94F6D;
-  margin-bottom: 40px;
+  padding-top: 10px;
+  line-height: 127px;
+  text-align: center;
   margin: 25px;
 }
 
@@ -53,11 +54,11 @@ button {
   border: 2px solid #9AABD8;
   border-radius: 5px;
   background-color: transparent;
-  font-family: "Cursed Timer ULiL", sans-serif;
+  font-family: "CursedTimer";
   font-size: 18px;
   color: #9AABD8;
 }
 
 .reset {
-  width: 55px;
+  width: 70px;
 }
